# plutus-scripts-e2e

./: .gitignore  CLAUDE.md  README.md  cabal.project  flake.nix  fourmolu.yaml  treefmt.toml
nix/: outputs.nix  project.nix  shell.nix
plutus-scripts/: Spec.hs  plutus-scripts.cabal
plutus-scripts/Helpers/: Envelopes.hs  ScriptUtils.hs
plutus-scripts/PlutusScripts/: BLS.hs  Helpers.hs
plutus-scripts/PlutusScripts/Array/: V1_1_0_0.hs  V1_1_1_0.hs  V2_100.hs  V2_1_0_0.hs  V2_1_1_0.hs  V3_100.hs  V3_1_0_0.hs  V3_1_1_0.hs  V_1_1.hs
plutus-scripts/PlutusScripts/BLS/: Common.hs
plutus-scripts/PlutusScripts/BLS/AggregateSigWithMultipleKeys/: Common.hs  V_1_1.hs
plutus-scripts/PlutusScripts/BLS/AggregateSigWithSingleKey/: Common.hs  V_1_1.hs
plutus-scripts/PlutusScripts/BLS/Groth16/: Common.hs  V_1_1.hs
plutus-scripts/PlutusScripts/BLS/SchnorrG1/: Common.hs  V_1_1.hs
plutus-scripts/PlutusScripts/BLS/SchnorrG2/: Common.hs  V_1_1.hs
plutus-scripts/PlutusScripts/BLS/SimpleSignAndVerify/: Common.hs  V_1_1.hs
plutus-scripts/PlutusScripts/BLS/VerifyOverG1/: Common.hs  V_1_1.hs
plutus-scripts/PlutusScripts/BLS/VerifyOverG2/: Common.hs  V_1_1.hs
plutus-scripts/PlutusScripts/BLS/Vrf/: Common.hs  V_1_1.hs
plutus-scripts/PlutusScripts/Basic/: Common.hs  V_1_0.hs  V_1_1.hs
plutus-scripts/PlutusScripts/Batch6/: Array.hs  BLS12_381_MultiScalarMul.hs  DropList.hs  ExpModInteger.hs  V3_100.hs  V3_110.hs  V_1_0.hs  V_1_1.hs  Value.hs
plutus-scripts/PlutusScripts/Batch6/Array/: Common.hs  V1_100.hs  V1_110.hs  V2_100.hs  V2_110.hs  V3_100.hs  V3_110.hs
plutus-scripts/PlutusScripts/Batch6/BLS12_381_MultiScalarMul/G1/: Common.hs  V3_100.hs  V3_110.hs
plutus-scripts/PlutusScripts/Batch6/BLS12_381_MultiScalarMul/G2/: Common.hs  V3_100.hs  V3_110.hs
plutus-scripts/PlutusScripts/Batch6/DropList/: Common.hs  V3_100.hs  V3_110.hs
plutus-scripts/PlutusScripts/Batch6/ExpModInteger/: Common.hs  V3_100.hs  V3_110.hs
plutus-scripts/PlutusScripts/Batch6/Value/: Common.hs  V3_100.hs  V3_110.hs
plutus-scripts/PlutusScripts/Bitwise/: Common.hs  Complement.hs  Conversions.hs  CountFindFirstSet.hs  Logical.hs  ReadBit.hs  ReplicateByte.hs  ShiftRotate.hs  V_1_0.hs  V_1_1.hs  WriteBits.hs
plutus-scripts/PlutusScripts/Casing/: Casing.hs  Common.hs
plutus-scripts/PlutusScripts/Governance/: Common.hs  V_1_1.hs
plutus-scripts/PlutusScripts/Hashing/: Common.hs  Ripemd_160.hs  V_1_0.hs  V_1_1.hs
plutus-scripts/PlutusScripts/SECP256k1/: Common.hs  V_1_0.hs  V_1_1.hs
plutus-scripts/Spec/: WriteScriptFiles.hs
plutus-scripts/app/: Main.hs
