cabal-version: 3.0
name:          plutus-scripts
version:       1.0.0.1
synopsis:      Plutus scripts used for cardano-node-tests
description:   Plutus scripts used for cardano-node-tests.
category:
  Cardano,
  Testing,

author:        IOG
maintainer:    martin.kourim@iohk.io
license:       Apache-2.0
license-files:
  LICENSE
  NOTICE

copyright:     2024 Intersect.
build-type:    Simple

common project-config
  default-language:   Haskell2010
  default-extensions:
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    FlexibleInstances
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    MultiParamTypeClasses
    ScopedTypeVariables
    StandaloneDeriving
    TypeFamilies

  ghc-options:
    -Wall -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-import-lists
    -Wnoncanonical-monad-instances -Wredundant-constraints
    -Wunused-packages

  build-depends:      base >=4.14 && <5

test-suite plutus-scripts
  import:         project-config
  ghc-options:    -Wno-unused-packages
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  hs-source-dirs: ./
  other-modules:
    Helpers.ScriptUtils
    PlutusScripts.Basic.Common
    PlutusScripts.Basic.V_1_0
    PlutusScripts.Basic.V_1_1
    PlutusScripts.Bitwise.Complement
    PlutusScripts.Bitwise.Conversions
    PlutusScripts.Bitwise.CountFindFirstSet
    PlutusScripts.Bitwise.Logical
    PlutusScripts.Bitwise.ShiftRotate
    PlutusScripts.Bitwise.ReplicateByte
    PlutusScripts.Bitwise.ReadBit
    PlutusScripts.Bitwise.WriteBits
    PlutusScripts.Bitwise.V_1_0
    PlutusScripts.Bitwise.V_1_1
    PlutusScripts.BLS
    PlutusScripts.BLS.AggregateSigWithMultipleKeys.Common
    PlutusScripts.BLS.AggregateSigWithMultipleKeys.V_1_1
    PlutusScripts.BLS.AggregateSigWithSingleKey.Common
    PlutusScripts.BLS.AggregateSigWithSingleKey.V_1_1
    PlutusScripts.BLS.Common
    PlutusScripts.BLS.Groth16.Common
    PlutusScripts.BLS.Groth16.V_1_1
    PlutusScripts.BLS.SchnorrG1.Common
    PlutusScripts.BLS.SchnorrG1.V_1_1
    PlutusScripts.BLS.SchnorrG2.Common
    PlutusScripts.BLS.SchnorrG2.V_1_1
    PlutusScripts.BLS.SimpleSignAndVerify.Common
    PlutusScripts.BLS.SimpleSignAndVerify.V_1_1
    PlutusScripts.BLS.VerifyOverG1.Common
    PlutusScripts.BLS.VerifyOverG1.V_1_1
    PlutusScripts.BLS.VerifyOverG2.Common
    PlutusScripts.BLS.VerifyOverG2.V_1_1
    PlutusScripts.BLS.Vrf.Common
    PlutusScripts.BLS.Vrf.V_1_1
    PlutusScripts.Governance.Common
    PlutusScripts.Governance.V_1_1
    PlutusScripts.Hashing.Common
    PlutusScripts.Hashing.Ripemd_160
    PlutusScripts.Hashing.V_1_0
    PlutusScripts.Hashing.V_1_1
    PlutusScripts.Helpers
    PlutusScripts.SECP256k1.Common
    PlutusScripts.SECP256k1.V_1_0
    PlutusScripts.SECP256k1.V_1_1
    Spec.WriteScriptFiles

  --------------------------
  -- IOG dependencies
  --------------------------
  build-depends:
    , cardano-api        ^>=10.16.3.0
    , data-default       >=0.8
    , plutus-core        ^>=1.45.0.0
    , plutus-ledger-api  ^>=1.45.0.0
    , plutus-tx          ^>=1.45.0.0
    , plutus-tx-plugin   ^>=1.45.0.0


  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , aeson
    , base
    , bytestring
    , directory
    , exceptions
    , filepath
    , lens
    , prettyprinter
    , text
    , time
