cabal-version: 3.0
name:          plutus-scripts
version:       1.0.0.1
synopsis:      Plutus scripts used for cardano-node-tests
description:   Plutus scripts used for cardano-node-tests.
category:
  Cardano,
  Testing,

author:        IOG
maintainer:    martin.kourim@iohk.io
license:       Apache-2.0
license-files: LICENSE
copyright:     2024 Intersect.
build-type:    Simple

-- These options are supported by GHC and Plinth
common ghc-options
  ghc-options:
    -Wall -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-import-lists
    -Wnoncanonical-monad-instances -Wredundant-constraints
    -Wunused-packages

  default-language:   Haskell2010
  default-extensions:
    BlockArguments
    DataKinds
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TypeApplications
    TypeFamilies
    ViewPatterns

-- These options are required for Plinth builds
common plinth-options
  import:      ghc-options
  ghc-options:
    -fobject-code -fno-full-laziness -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas -fno-spec-constr -fno-specialise
    -fno-strictness -fno-unbox-small-strict-fields
    -fno-unbox-strict-fields

library scripts
  import:          plinth-options
  hs-source-dirs:  ./
  ghc-options:     -fplugin PlutusTx.Plugin
  build-depends:
    , base               >=4.14      && <5
    , bytestring
    , plutus-core        ^>=1.53.1.0
    , plutus-ledger-api  ^>=1.53.1.0
    , plutus-tx          ^>=1.53.1.0
    , plutus-tx-plugin   ^>=1.53.1.0

  exposed-modules:
    Helpers.ScriptUtils
    PlutusScripts.Basic.Common
    PlutusScripts.Basic.V_1_0
    PlutusScripts.Basic.V_1_1
    PlutusScripts.Bitwise.Complement
    PlutusScripts.Bitwise.Conversions
    PlutusScripts.Bitwise.CountFindFirstSet
    PlutusScripts.Bitwise.Logical
    PlutusScripts.Bitwise.ReadBit
    PlutusScripts.Bitwise.ReplicateByte
    PlutusScripts.Bitwise.ShiftRotate
    PlutusScripts.Bitwise.V_1_0
    PlutusScripts.Bitwise.V_1_1
    PlutusScripts.Bitwise.WriteBits
    PlutusScripts.BLS
    PlutusScripts.BLS.AggregateSigWithMultipleKeys.Common
    PlutusScripts.BLS.AggregateSigWithMultipleKeys.V_1_1
    PlutusScripts.BLS.AggregateSigWithSingleKey.Common
    PlutusScripts.BLS.AggregateSigWithSingleKey.V_1_1
    PlutusScripts.BLS.Common
    PlutusScripts.BLS.Groth16.Common
    PlutusScripts.BLS.Groth16.V_1_1
    PlutusScripts.BLS.SchnorrG1.Common
    PlutusScripts.BLS.SchnorrG1.V_1_1
    PlutusScripts.BLS.SchnorrG2.Common
    PlutusScripts.BLS.SchnorrG2.V_1_1
    PlutusScripts.BLS.SimpleSignAndVerify.Common
    PlutusScripts.BLS.SimpleSignAndVerify.V_1_1
    PlutusScripts.BLS.VerifyOverG1.Common
    PlutusScripts.BLS.VerifyOverG1.V_1_1
    PlutusScripts.BLS.VerifyOverG2.Common
    PlutusScripts.BLS.VerifyOverG2.V_1_1
    PlutusScripts.BLS.Vrf.Common
    PlutusScripts.BLS.Vrf.V_1_1
    PlutusScripts.Governance.Common
    PlutusScripts.Governance.V_1_1
    PlutusScripts.Hashing.Common
    PlutusScripts.Hashing.Ripemd_160
    PlutusScripts.Hashing.V_1_0
    PlutusScripts.Hashing.V_1_1
    PlutusScripts.Helpers
    PlutusScripts.SECP256k1.Common
    PlutusScripts.SECP256k1.V_1_0
    PlutusScripts.SECP256k1.V_1_1
    PlutusScripts.Batch6.DropList
    PlutusScripts.Batch6.V_1_0
    PlutusScripts.Batch6.V_1_1

executable envelopes
  import:         ghc-options
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:
    , base               >=4.14      && <5
    , directory
    , plutus-core        ^>=1.53.1.0
    , plutus-ledger-api  ^>=1.53.1.0
    , plutus-tx          ^>=1.53.1.0
    , scripts
    , text
    , with-utf8
